# AVIDA

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile
.cargo/: config  config.toml
.github/workflows/: tests.yml
avida-ts/: README.md  contract.env  eslint.config.js  eslint.ignores.js  local.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reset.d.ts  tsconfig.base.json  tsconfig.eslint.json
avida-ts/docker/: docker-compose.local.yaml
avida-ts/docker/cheqd-resource-artifacts/: did_payload.json  jwk.json  resource_payload_no_data.json
avida-ts/docker/hermes-relayer-config/: cheqd-relayer  config.toml
avida-ts/docker/local-chain-config/: cheqd.json  neutron.json
avida-ts/docker/scripts/: cheqd-genesis.sh  cheqd-resource-upload.sh  neutron-deploy.sh  relayer-avida-link.sh  relayer-chain-config.sh
avida-ts/env/: local.env
avida-ts/scripts/: debug  deploy-avida.mjs  gen-contract-types.mjs  local-e2e-demo.mjs
contracts/anoncreds-verifier/: Cargo.toml
contracts/anoncreds-verifier/examples/: schema.rs
contracts/anoncreds-verifier/src/: consts.rs  contract.rs  error.rs  ibc.rs  lib.rs  tests.rs
contracts/anoncreds-verifier/src/helpers/: events.rs  ibc.rs  mod.rs
contracts/avida-sdjwt-verifier/: Cargo.toml
contracts/avida-sdjwt-verifier/schema/: avida-sdjwt-verifier.json
contracts/avida-sdjwt-verifier/schema/raw/: instantiate.json  query.json  response_to_get_route_requirements.json
contracts/avida-sdjwt-verifier/src/: contract.rs  errors.rs  lib.rs  types.rs  verifier.rs
contracts/avida_example/: Cargo.toml
contracts/avida_example/schema/: avida-example.json
contracts/avida_example/schema/cw_schema/: avida-example.json
contracts/avida_example/schema/cw_schema/raw/: execute.json  instantiate.json  query.json  response_to_get_verifier_address.json
contracts/avida_example/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_route_requirements.json  response_to_get_verifier_address.json
contracts/avida_example/src/: constants.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs
contracts/avida_example/src/tests/: exec_test.rs  fixtures.rs  flow_test.rs  mod.rs  query_test.rs
contracts/avida_example/src/tests/keypair/: test_ed25519_public.pem
contracts/base-sdjwt-verifier/: Cargo.toml
contracts/base-sdjwt-verifier/schema/: base-sdjwt-verifier.json
contracts/base-sdjwt-verifier/schema/raw/: execute.json  query.json
contracts/base-sdjwt-verifier/src/: contract.rs  lib.rs  types.rs
contracts/sdjwt-verifier/: Cargo.toml  README.md
contracts/sdjwt-verifier/schema/: avida-sdjwt-verifier.json
contracts/sdjwt-verifier/schema/cw_schema/: avida-sdjwt-verifier.json
contracts/sdjwt-verifier/schema/cw_schema/raw/: execute.json  instantiate.json  query.json  response_to_get_route_requirements.json  response_to_get_route_verification_key.json  response_to_get_routes.json
contracts/sdjwt-verifier/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_route_requirements.json
contracts/sdjwt-verifier/src/: contract.rs  errors.rs  lib.rs  msg.rs  state.rs  types.rs  verifier.rs
contracts/sdjwt-verifier/src/tests/: contract_test.rs  deregister.rs  dynamic_req.rs  fixtures.rs  mod.rs  register.rs  revocation.rs  types.rs  update.rs  utils.rs  verifier.rs  verifier_exp_test.rs  verifier_register_test.rs  verifier_test.rs  verifier_update_test.rs  verifier_verify_test.rs
docker/: docker-compose.local.yaml
docker/local-chain-config/: cheqd.json  config.yaml  neutron.json
docker/scripts/: cheqd-genesis.sh  relayer-setup.sh
schema/: vectis-anoncreds-verifier.json
schema/raw/: query.json  response_to_channel.json
scripts/: build-optimise.sh  build.sh  rm-local-node.sh  run-test-node.sh  schemas.sh
