[workspace]
members = ["packages/cheqd", "packages/common", "contracts/sdjwt-verifier", "contracts/avida_example", "packages/avida_test_utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nymlab/avida"
keywords = [ "Vectis", "CosmWasm", "zkp", "verifiableCredential", "sd-jwt" ]

[workspace.dependencies]
cosmwasm-std = { version = "1.5", features = ["iterator", "ibc3", "staking", "cosmwasm_1_2"] }
cw2 = "1.1.2"
cosmwasm-schema = "1.5"
cw-utils = "1.0.3"
cw-storage-plus = "1.2"
# sylvia framework
sylvia = "0.10"
sylvia-derive = "0.10"

thiserror = { version = "1.0.50" }
anyhow = { version = "1.0.51"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
schemars = "0.8.1"

[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
