[workspace]
members = ["packages/cheqd", "packages/common", "contracts/sdjwt-verifier", "contracts/avida_example", "packages/avida_test_utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nymlab/avida"
keywords = [ "Vectis", "CosmWasm", "zkp", "verifiableCredential", "sd-jwt" ]

[workspace.dependencies]

anyhow = { version = "1.0.51"}

cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  "stargate",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
sd-jwt-rs = { git = "https://github.com/nymlab/sd-jwt-rust", rev = "5fc046ce204dfc568b2d91b365534fee8e059e5b", default-features = false, features = ["no_rand"]}
jsonwebtoken = { git = "https://github.com/nymlab/jsonwebtoken", rev = "98763b38713c54f", default-features = false, features = ["no_rand"] }
serde_json = {version = "1.0.116", default-features = false, features = ["alloc"]}
cw-utils = "2.0.0"

[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
