[workspace]
members = ["packages/cheqd", "packages/common", "contracts/sdjwt-verifier", "packages/avida_test_utils"]
exclude = ["contracts/avida_example", "contracts/anoncreds-verifier" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nymlab/avida"
keywords = [ "Vectis", "CosmWasm", "zkp", "verifiableCredential", "sd-jwt", "PlatformD" ]

[workspace.dependencies]

anyhow = { version = "1.0.51"}

cosmwasm-schema = "3.0.2"
cosmwasm-std = { version = "3.0.2", features = [
  "iterator",
  "staking",
  "stargate",
  "cosmwasm_3_0",
] }
cw-storage-plus = "3.0.0"
cw2 = "3.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
sd-jwt-rs = { git = "https://github.com/nymlab/sd-jwt-rust", rev = "de9ccce7858e6e86f6a6e2f4dd23bcb4dc534421", default-features = false, features = ["no_rand"]}
jsonwebtoken = { git = "https://github.com/nymlab/jsonwebtoken", rev = "98763b38713c54f", default-features = false, features = ["no_rand"] }
serde_json = {version = "1.0.116", default-features = false, features = ["alloc"]}
cw-utils = "3.0.0"

[profile.release]
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
