[package]
name = "avida-anoncreds-verifier"
description = "Provides AnonCreds verification with revocation checks supported by resources on cheqd via IBC"
edition = "2021"
version = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
ssi = { path = "../../packages/ssi"} 
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
sylvia = { workspace = true }
sylvia-derive = { workspace = true }
