[package]
name = "avida-anoncreds-verifier"
description = "Part of the AVIDA protocol - provides AnonCreds verification with revocation checks supported by resources on cheqd via IBC"
edition = "2021"
version = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# backtraces feature removed in CosmWasm 3.0
# for more explicit tests, cargo test --features=backtraces (no longer available)
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
avida-anoncreds= { path = "../../packages/anoncreds"}
avida-cheqd= { path = "../../packages/cheqd"}
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
sylvia = { workspace = true }
sylvia-derive = { workspace = true }
