[package]
name = "avida-example"
version = "0.1.0"
edition = "2021"
authors = ["andrew <andrew@nymlab.it>"]
resolver = "2"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
migration = []

[dependencies]
avida-sdjwt-verifier = { path = "../sdjwt-verifier/", features = ["library"]}
avida-common = { path = "../../packages/common/"}
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
thiserror = { version = "1.0.58" }
cw-utils = "2.0.0"

[dev-dependencies]
serde_json = "1.0.116"
josekit = "0.8.6"
sd-jwt-rs = "0.7.0"
jsonwebtoken = { version="9.3.0", features=["use_pem"]}
avida-test-utils = { path = "../../packages/avida_test_utils/", features = ["sdjwt"]}
cw-multi-test = {version = "2", features = ["staking", "stargate", "cosmwasm_2_1"]}
