[package]
name = "avida-example"
version = "0.1.0"
edition = "2021"
authors = ["andrew <andrew@nymlab.it>"]
resolver = "2"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
migration = []

[dependencies]
avida-sdjwt-verifier = { path = "../sdjwt-verifier/", features = ["library"]}
avida-common = { path = "../../packages/common/"}
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
josekit = "0.8.6"
sd-jwt-rs = "0.7.0"
jsonwebtoken = { version="9.3.0", features=["use_pem"]}
avida-tests = { path = "../../packages/avida_tests/", features = ["sdjwt"]}
cw-multi-test = {version = "3", features = ["staking", "stargate", "cosmwasm_3_0"]}
serde = { workspace = true }
