[package]
name = "avida-sdjwt-verifier"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>"]
edition = "2021"
resolver = "2"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
migration = []
mt = ["sylvia/mt"]

[dependencies]
avida-common= { path = "../../packages/common/"}
avida-cheqd= { path = "../../packages/cheqd/"}
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
sylvia = { workspace = true }
sylvia-derive = { workspace = true }
serde = {workspace = true}
serde-json-wasm = {workspace = true}
cw2 = { workspace = true }
cw-utils= { workspace = true }
sd-jwt-rs = { git = "https://github.com/nymlab/sd-jwt-rust", rev = "fe246a8436172bf", default-features = false, features = ["no_rand"]}
# jsonwebtoken = { git = "https://github.com/nymlab/jsonwebtoken", rev = "6afcff056817b4393", default-features = false, features = ["no_rand"] }
# sd-jwt-rs = { path = "../../../platform-d/sd-jwt-rust", default-features = false, features = ["no_rand"]}
# jsonwebtoken = { path = "../../../platform-d/jsonwebtoken",  default-features = false, features = ["no_rand"] }
thiserror = { workspace = true }
serde_json = {version = "1.0.116", default-features = false, features = ["alloc"]}


[dev-dependencies]
sylvia = { workspace = true, features = ["mt"] }
