[package]
name = "avida-sdjwt-verifier"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>"]
edition = "2021"
resolver = "2"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []

[dependencies]
avida-common= { path = "../../packages/common/"}
avida-cheqd= { path = "../../packages/cheqd/"}
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
sd-jwt-rs = { git = "https://github.com/nymlab/sd-jwt-rust", rev = "c05b255790a6b2f702e", default-features = false, features = ["no_rand"]}
jsonwebtoken = { git = "https://github.com/nymlab/jsonwebtoken", rev = "98763b38713c54f", default-features = false, features = ["no_rand"] }
serde_json = {version = "1.0.116", default-features = false, features = ["alloc"]}
serde-json-wasm = {workspace = true}
cw-utils = "2.0.0"

[dev-dependencies]
avida-test-utils = { path = "../../packages/avida_test_utils/", features = ["sdjwt"]}
cw-multi-test = {version = "2", features = ["staking", "stargate", "cosmwasm_2_1"]}
josekit = "0.8.6"
