[package]
name = "avida-sdjwt-verifier"
version = "0.1.0"
authors = ["belsy <belsy@nymlab.it>"]
edition = "2021"
resolver = "2"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []

[dependencies]
avida-common= { path = "../../packages/common/"}
avida-cheqd= { path = "../../packages/cheqd/"}
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sd-jwt-rs = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"]}
cw-utils = { workspace = true }

[dev-dependencies]
avida-test-utils = { path = "../../packages/avida_test_utils/", features = ["sdjwt"]}
cw-multi-test = {version = "3", features = ["staking", "stargate", "cosmwasm_3_0"]}
josekit = "0.8.6"
